crates/rattler_macros/tests/04-out-of-order-struct.rs
use rattler_macros::sorted;

#[sorted]
pub struct Alphabet {
    b: i64,
    a: String,
    haha: String,
    hihi: String,
    x: String,
}

fn main() {}
